<resources>
    <string name="app_name">print(d)</string>

    <string name="error_loading_collections">Oops, something went wrong</string>
    <string name="text_empty_repos">This account doesn\'t have any public repository</string>
    <string name="error_username_not_found">Oops, Octocat doesn\'t know that username</string>
    <string name="hit_username">GitHub username</string>
    <string name="default_info_message">Enter a GitHub username above to see its repositories</string>
    <string name="print">Print</string>
    <string name="me_user">me</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="thingiverse">Thingiverse</string>
    <string name="browsethingiverse">Browse Thingiverse</string>
    <string name="bedlevel">Bed level</string>
    <string name="checkprintstatus">Check print status</string>
    <string name="nextstep">Next step</string>
    <string name="stlname">printdDownload.stl</string>
    <string name="ininame">printdDownload.ini</string>
    <string name="location">local</string>
    <string name="sliceCommand">slice</string>
    <string name="config_printer">Choose Config File</string>
    <string name="accountUsername">Username</string>
    <string name="accountPassword">Password</string>
    <string name="confirmPassword">Confirm</string>
    <string name="completebedleveling">Complete bed leveling</string>
    <string name="areyoufinished">Are you finished?</string>
    <string name="begin">Begin</string>
    <string name="areyoureadytogetstarted">Are you ready to get started?</string>
    <string name="proceed">Proceed</string>
    <string name="proceedtothenextcorner">Proceed to the next corner?</string>
    <string name="errorbedleveling">Error bed leveling</string>
    <string name="errorbedleveling2">"There was an error bed leveling.\nMake sure your printer is turned on."</string>
    <string name="octoKey">OctoPrint API Key</string>
    <string name="printerMake">Printer Make</string>
    <string name="printerModel">Printer Model</string>
    <string name="createAccount">Create Account</string>
    <string name="editAccount">Edit Account</string>
    <string name="loginButton">Login</string>
    <string name="thingiverseURI">http://www.thingiverse.com/</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="bed_level_start_instructions">What you will need:\n\n\n1. A sheet of paper\n\n2. Whatever is
        needed to adjust the screws on the bed of your printer</string>
    <string name="bed_level_instructions">When the printer head stops you may begin.\n\n
        Put a piece of paper underneath the nozzle. Adjust that corner of the bed until there is
        slight resistance on the paper from the nozzle.</string>
    <string name="helpquestion1">What is print(d)?</string>
    <string name="helpanswer1">"print(d) is an all-in-one 3D printer utility app. Currently there are just too many steps involved with 3D printing. Once set up, print(d) takes care of all of that for you. All you have to do is choose what to print and the rest is up to us."</string>
    <string name="helpquestion2">Where do I find my OctoPrint API key?</string>
    <string name="helpanswer2">The API key can be found in the OctoPrint settings. Also ensure to check the checkbox labelled "Enable"</string>
    <string name="helpquestion3">Why do I need a Thingiverse account?</string>
    <string name="helpanswer3">Thingiverse has an open API which we integrate with. Because of this we are able to pull the items from your Thingiverse collection and print them.</string>
    <string name="helpquestion4">How do I set up OctoPrint on my Raspberry Pi?</string>
    <string name="helpanswer4">There are directions on the OctoPrint site here:</string>
    <string name="printstatus_completion">Percent complete</string>
    <string name="printstatus_filepos">Filepos</string>
    <string name="printstatus_print_time">Print time</string>
    <string name="printstatus_print_time_left">Print time left</string>
    <string name="refresh">Refresh</string>
    <string name="start">Start</string>
    <string name="complete">Complete</string>
    <string name="select_octoprint">Select your OctoPrint installation from the choices shown below.
        If it is not visible, visit http://octoprint.org/download/</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>


    <string name="client_id">cc43e5f8f872869cbb07</string>
    <string name="redirect_uri">print-d://authRequestResponse</string>
</resources>
