<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.printdinc.printd.viewmodel.CreateAccountViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/very_light_grey"
        tools:context=".MainActivity">


        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/secondary_text"
            android:text="@{viewModel.usernameText}"/>

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text=""
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignStart="@+id/usernameInput" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/octoKey"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:layout_alignTop="@+id/apiKeyInput"
            android:layout_alignStart="@+id/textView7"
            android:layout_toStartOf="@+id/apiKeyInput"
            android:layout_alignEnd="@+id/textView3" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/modelSpinner"
            android:layout_alignEnd="@+id/textView5"
            android:text="@string/printerMake"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:layout_alignStart="@+id/textView" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView8"
            android:layout_alignTop="@+id/modelSpinner"
            android:text="@string/printerModel"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:layout_toStartOf="@+id/modelSpinner"
            android:layout_alignEnd="@+id/textView" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmPassword"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:layout_alignBaseline="@+id/confirmInput"
            android:layout_alignBottom="@+id/confirmInput"
            android:layout_alignStart="@+id/textView5"
            android:layout_alignEnd="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountPassword"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/usernameInput"
            android:layout_alignStart="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/usernameInput"
            android:layout_alignBottom="@+id/usernameInput"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@+id/usernameInput"
            android:text="@string/accountUsername"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/primary_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/apiKeyInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_below="@+id/confirmInput"
            android:layout_alignStart="@+id/confirmInput" />

        <EditText
            android:id="@+id/confirmInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_below="@+id/passwordInput"
            android:layout_alignStart="@+id/passwordInput" />

        <Spinner
            android:id="@+id/makeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/apiKeyInput"
            android:layout_alignEnd="@+id/apiKeyInput" />

        <Spinner
            android:id="@+id/modelSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/makeSpinner"
            android:layout_alignStart="@+id/makeSpinner"
            android:layout_below="@+id/makeSpinner"
            android:layout_marginTop="25dp" />

        <Button
            android:id="@+id/completeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/modelSpinner"
            android:layout_below="@+id/textView9"
            android:text="@string/createAccount" />


    </RelativeLayout>

</layout>
