<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.printdinc.printd.viewmodel.PrintStatusViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:activity=".MainActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        </android.support.design.widget.AppBarLayout>


        <TextView
            android:id="@+id/completion"
            android:text="@string/printstatus_completion"
            android:layout_below="@+id/appbar"
            android:clickable="true"
            android:textSize="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/completion_answer"
            android:text="@{viewModel.completion}"
            android:clickable="true"
            android:textSize="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/completion"
            android:layout_below="@id/appbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/filepos"
            android:text="@string/printstatus_filepos"
            android:layout_below="@+id/completion"
            android:clickable="true"
            android:textSize="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/filepos_answer"
            android:text="@{viewModel.filepos}"
            android:clickable="true"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/completion_answer"
            android:layout_alignLeft="@+id/completion_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/printTime"
            android:text="@string/printstatus_print_time"
            android:layout_below="@+id/filepos"
            android:clickable="true"
            android:textSize="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/printTime_answer"
            android:text="@{viewModel.printTime}"
            android:clickable="true"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/filepos_answer"
            android:layout_alignLeft="@+id/filepos_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/printTimeLeft"
            android:text="@string/printstatus_print_time_left"
            android:layout_below="@+id/printTime"
            android:clickable="true"
            android:textSize="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/printTimeLeft_answer"
            android:text="@{viewModel.printTimeLeft}"
            android:clickable="true"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/printTime_answer"
            android:layout_alignLeft="@+id/printTime_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</layout>
